--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -21,7 +21,7 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
-    <title>React App</title>
+    <title>KMS - Kabina Management System</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
